fix(tsconfig): incremtal not working with build.js

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
 	"compilerOptions": {
-		"incremental": true,
+		"incremental": false,
 		"target": "ES2022",
 		"lib": [ "ES2022" ],
 		"experimentalDecorators": true,
